TestCases/Errors/threaded_movement/observations/spr_11_obs.spm
 obs   3-12   0.0209375 
 obs   3-13   0.0152420634920635 
 obs   3-14   0.00620653594771242 
 obs   4-14   0.00631519274376417 
 obs   5-14   0 
 obs   3-15   0.01 
 obs   4-15   0.0118244047619048 
 obs   5-15   0 
 obs   6-15   0.0085 
 obs   6-16   0.00952380952380952 
 obs   7-16   0.00952380952380952 
 error_value   3-12   0 
 error_value   3-13   0 
 error_value   3-14   0 
 error_value   4-14   0 
 error_value   5-14   0 
 error_value   3-15   0 
 error_value   4-15   0 
 error_value   5-15   0 
 error_value   6-15   0 
 error_value   6-16   0 
 error_value   7-16   0 
